--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <service android:name=".TestService" android:enabled="true"/>
+        <service
+            android:name=".TestService"
+            android:enabled="true" />
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".ChatActivity"
@@ -36,12 +39,17 @@
         <activity
             android:name=".LogInActivity"
             android:label="@string/app_name" >
-            <!--android:label="@string/title_activity_log_in" >-->
+
+            <!-- android:label="@string/title_activity_log_in" > -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".parser.WebViewActivity_test"
+            android:label="@string/title_activity_web_view_activity_test" >
         </activity>
     </application>
 
