--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:enabled="true" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
 
             <!-- <intent-filter> -->
@@ -26,7 +26,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".ChatActivity"
+            android:name=".activity.ChatActivity"
             android:label="@string/title_activity_chat" >
 
             <!-- <intent-filter> -->
@@ -37,7 +37,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".LogInActivity"
+            android:name=".activity.LogInActivity"
             android:label="@string/app_name" >
 
             <!-- android:label="@string/title_activity_log_in" > -->
