--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name=".MsgReceiverIntentService"
+            android:name=".service.MsgReceiverIntentService"
             android:exported="false" >
         </service>
 
