--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,34 +11,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name=".service.MsgReceiverIntentService"
+            android:name=".client.service.MsgReceiverIntentService"
             android:exported="false" >
         </service>
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".client.activity.MainActivity"
             android:label="@string/app_name" >
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".activity.ChatActivity"
+            android:name=".client.activity.ChatActivity"
             android:label="@string/title_activity_chat" >
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".activity.LogInActivity"
+            android:name=".client.activity.LogInActivity"
             android:label="@string/app_name" >
 
             <!-- android:label="@string/title_activity_log_in" > -->
