--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:label="@string/app_name" >
 
             <!-- android:label="@string/title_activity_log_in" > -->
+
+        </activity>
+
+        <activity
+            android:name=".client.activity.SplashActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
